--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             color: #666;
             font-family: 'Courier New', monospace;
             margin-bottom: 30px;
-            text-align: center;
+            text-align: left;
             background: #f5f5f5;
             padding: 8px;
             border-radius: 4px;
@@ -368,7 +368,7 @@
         <div class="main-content">
             <div class="content">
             <h1 class="title">Derp Dogs Don't Understand Basic Concepts</h1>
-            <p class="token-address">9HvB1znfUmv9MRx5mB4f5GKMvptCf73kdhrdEDvrpump</p>
+            <p class="token-address">9J96jx8DUhZn6wFCQSVJMNBQ1wMdWHPrPw8GoTcHpump</p>
             
             <div class="text-content">
                 <p>Shoving every single thing you own into a moving truck and hauling it across multiple states is about as effective and pleasant as attempting to escape molten rock while wearing flippers.</p>
