--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Derp Dogs Don't Understand Basic Concepts</title>
+    <title>Tard Dog Stories</title>
     <link rel="icon" type="image/png" href="thumbnail.png">
     <style>
         body {
