--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <div class="container">
         <!-- Banner -->
         <div class="banner">
-            <img src="193ccd77-9518-49b6-926c-ce9880fa2ffb" alt="Blog Banner">
+            <img src="193ccd77-9518-49b6-926c-ce9880fa2ffb.png" alt="Blog Banner">
         </div>
         
         <!-- Sidebar -->
